# hackathon-reminder-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  chat_modes.py  config.py  filter.py  master_bot.py  pyproject.toml  requirements.txt  words_game.db
handlers/: mode_switch.py
speedy_translate/: __init__.py  dictionary.csv  main.py
spyfall/: __init__.py  bot.py  config.py  database.py  dictionary.py  game.py  requirements.txt  slovarik.txt  spy_game.db
spyfall/handlers/: callbacks.py  commands.py  messages.py  timer.py  voting.py
standard_mode/: __init__.py  main.py
words_game/: __init__.py  tg_bot_only_commands.py  words_game.db  work_with_dp.py
wordweaver/: __init__.py  container.py  telegram.py
wordweaver/adapters/: english.py  session.py  user.py
wordweaver/entities/: player.py  user.py
wordweaver/executors/: session.py
