[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "itmo-devdays-f2025"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
aiofiles = "~24.1"
aiogram = "~3.22"
aiohappyeyeballs = "~2.6"
aiohttp = "~3.12"
aiosignal = "~1.4"
aiosqlite = "~0.21"
annotated-types = "~0.7"
async-timeout = "~5.0"
attrs = "~25.4"
certifi = "~2025.11"
dotenv = "~0.9"
dependency-injector = "~4.48"
frozenlist = "~1.8"
idna = "~3.11"
magic-filter = "~1.0"
multidict = "~6.7"
propcache = "~0.4"
pydantic = "~2.11"
pydantic_core = "~2.33"
python = ">=3.13"
python-dotenv = "~1.2"
typing-inspection = "~0.4"
typing_extensions = "~4.15"
yarl = "~1.22"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^25.11"
mypy = "^1.18"
ruff = "^0.14"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
python_version = "3.13"
strict_equality = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "A005",    # Module {name} shadows a Python standard-library module.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}.
    "BLE001",  # Checks for `except` clauses that catch all exceptions.
    "D100",    # Missing docstring in public module.
    "D104",    # Missing docstring in public package.
]
select = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = ["ALL"]
"tests/**/test_*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
